--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "vkdw",
   "version": "",
-  "description": "Adds download and mark audio button at VK.com site",
+  "description": "Adds download and mark audio buttons at VK.com site",
   "main": "src/manifest.json",
   "scripts": {
     "dev": "set NODE_ENV=development&& webpack",
     "build": "./node_modules/.bin/gulp build-package"
   },
-  "author": "Jason Ford",
+  "author": "ralzinov",
   "dependencies": {
     "babel-core": "6.21.0",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.10",
+    "babel-plugin-transform-runtime": "6.15.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
+    "babel-preset-stage-0": "6.16.0",
+    "babel-runtime": "6.20.0",
     "del": "2.2.2",
+    "eslint-loader": "1.6.1",
     "eslint-plugin-react": "6.8.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-clean-css": "2.3.2",
